--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "walkor/workerman": "^4.1",
-        "phpunit/php-timer": "^6.0"
+        "phpunit/php-timer": "^6.0",
+        "rmccue/requests": "^2.0"
     }
 }
