--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "walkor/workerman": "^4.1",
         "phpunit/php-timer": "^6.0",
         "rmccue/requests": "^2.0",
-        "geoip2/geoip2": "~2.0"
+        "geoip2/geoip2": "~2.0",
+        "workerman/globaldata": "^1.0"
     }
 }
