--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,10 @@ server {
 		proxy_set_header Accept-Encoding "";
 		proxy_pass http://127.0.0.1:2335;
 	}
+
+	 location ~ /vod/ {
+	  	proxy_pass http://bin.entware.net;
+	 }
 }
 
 server {
