--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server {
 	listen [::]:80 default_server;
 
 	server_name ip.csgo.ovh;
-
+	
 	location / {
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
@@ -12,10 +12,6 @@ server {
 		proxy_set_header Accept-Encoding "";
 		proxy_pass http://127.0.0.1:2335;
 	}
-
-	 location ~ /vod/ {
-	  	proxy_pass http://bin.entware.net;
-	 }
 }
 
 server {
@@ -31,7 +27,6 @@ server {
 	}
 }
 
-
 server {
 	listen 80;
 	listen [::]:80;
@@ -42,5 +37,16 @@ server {
 		proxy_set_header Host $host;
 		proxy_set_header Accept-Encoding "";
 		proxy_pass http://127.0.0.1:2349;
+	}
+}
+
+server {
+	listen 80;
+	listen [::]:80;
+
+	server_name entware.cdn.csgo.ovh;
+
+	location / {
+		proxy_pass http://bin.entware.net:80;
 	}
 }
