--- a/nginx.conf
+++ b/nginx.conf
@@ -47,6 +47,9 @@ server {
 	server_name entware.cdn.csgo.ovh;
 
 	location / {
+		proxy_set_header Accept-Encoding "";
 		proxy_pass http://bin.entware.net:80;
+		sub_filter 'http://bin.entware.net/' 'http://entware.cdn.csgo.ovh/';
+		sub_filter_once on;
 	}
 }
