--- a/nginx.conf
+++ b/nginx.conf
@@ -15,18 +15,23 @@ server {
 }
 
 server {
-	listen 80;
-	listen [::]:80;
+    listen 80;
+    listen [::]:80;
 
-	server_name jsdelivr.csgo.ovh;
+    server_name entware.cdn.csgo.ovh;
 
-	location / {
-		proxy_set_header Host $host;
-		proxy_set_header Accept-Encoding "";
-		proxy_pass http://127.0.0.1:2301;
-	}
+    location / {
+        proxy_set_header Accept-Encoding "";
+        proxy_pass http://bin.entware.net:80;
+    }
+
+    location ~* /installer/opkg.conf$ {
+        proxy_set_header Accept-Encoding "";
+        proxy_pass http://bin.entware.net:80;
+        sub_filter 'http://bin.entware.net/' 'http://entware.cdn.csgo.ovh/';
+        sub_filter_once off;
+    }
 }
-
 server {
 	listen 80;
 	listen [::]:80;
