--- a/nginx.conf
+++ b/nginx.conf
@@ -56,5 +56,6 @@ server {
 		proxy_pass http://bin.entware.net:80;
 		sub_filter 'http://bin.entware.net/' 'http://entware.cdn.csgo.ovh/';
 		sub_filter_once on;
+		sub_filter_types *;
 	}
 }
