--- a/nginx.conf
+++ b/nginx.conf
@@ -31,6 +31,13 @@ server {
         sub_filter 'http://bin.entware.net/' 'http://entware.cdn.csgo.ovh/';
         sub_filter_once off;
     }
+
+    location ~* /installer/generic.sh$ {
+        proxy_set_header Accept-Encoding "";
+        proxy_pass http://bin.entware.net:80;
+        sub_filter 'http://bin.entware.net/' 'http://entware.cdn.csgo.ovh/';
+        sub_filter_once off;
+    }
 }
 server {
 	listen 80;
