--- a/nginx.conf
+++ b/nginx.conf
@@ -39,6 +39,20 @@ server {
         sub_filter_once off;
     }
 }
+
+server {
+	listen 80;
+	listen [::]:80;
+
+	server_name ipmap.csgo.ovh;
+
+	location / {
+		proxy_set_header Host $host;
+		proxy_set_header Accept-Encoding "";
+		proxy_pass http://127.0.0.1:2339;
+	}
+}
+
 server {
 	listen 80;
 	listen [::]:80;
