--- a/nginx.conf
+++ b/nginx.conf
@@ -70,6 +70,19 @@ server {
 	listen 80;
 	listen [::]:80;
 
+	server_name jsdelivr.csgo.ovh;
+
+	location / {
+		proxy_set_header Host $host;
+		proxy_set_header Accept-Encoding "";
+		proxy_pass http://127.0.0.1:2301;
+	}
+}
+
+server {
+	listen 80;
+	listen [::]:80;
+
 	server_name entware.cdn.csgo.ovh;
 
 	location / {
